<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"
        android:orientation="vertical"
        android:gravity="center"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/peach"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="20dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        app:cardCornerRadius="15dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="330dp"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNameSign"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="15dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="330dp"
            android:layout_gravity="center"
            android:layout_marginBottom="2dp"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassSign"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="15dp"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRePassSign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/re_enter_password"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="15dp"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhoneSign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone_no"
                    android:inputType="textPhonetic"
                    />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            android:layout_gravity="center"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="15dp"

            >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="330dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailSign"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.cardview.widget.CardView>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/btnSignup"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:padding="5dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/peach"
        />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>